@@ -1,5 +1,7 @@
 2009-12-04  Yuto Hayamizu  <y.hayamizu@gmail.com>
 
+	* test/test-twittering-mode.el (sign-string): add test
+
 	* twittering-mode.el (twittering-current-hashtag): docstring
 	(twittering-idle-time): removed (unused?)
 
